assets/css/style.css
body {
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
}

/*Header*/
.mySlides {
  position: relative;
  width: 100%;
      }
      

.header-title {
  top: 50%;
    left: 50%;
    position: absolute;
    background-color: #fff;
    transform: translate(-50%,-50%);
    padding: 20px;
    font-size: 2.3rem;
    font-weight: 500;
    border-radius: 5px;
     margin-right: 0;
}



/*navigation*/

.navbar {
  position: sticky;
    top: 0;
    z-index: 999999999999;
    margin-bottom: 0;
    padding: 5px;
    width: 100%;
    margin-right: 0;
}

.navbar-brand {
  padding: 5px;
}

.navbar-collapse {
  padding: 0px;
}

.nav-link {
  font-size: 10px;
}

.scroll-text{
  padding: 10px;
}

/*welcome section*/

.welcome-text {
  padding: 15px;
   margin-right: 0;
}

/* section*/
.card-deck{
margin: 5px;
}

.btn {
  display:block;
}

.row {
  padding: 10px;
}

.card {
  margin-bottom: 1.5rem;
}

.card-img-top {
  width: 100%;
  height: 225;
}

.clip-background {
  background-color: #b3e6ff;
}

.header-img {
  position: relative;
}

.title-text {
  color: 	#000000;
  background: #fff;
}

/* hotel section*/

.hotel-title {
  position: relative;
  width: 100%;
}

.hotel-img {
  position: relative;
}

.hotel-title-text {
  top: 50%;
    left: 50%;
    position: absolute;
    background-color: #fff;
    transform: translate(-50%,-50%);
    padding: 15px;
    font-size: 3rem;
    font-weight: 500;
    border-radius: 5px;
}

/* attraction section*/

.attraction-title {
  width: 100%;
  height: 100%;
  position: relative;
}

.attraction-title-text {
  top: 50%;
    left: 50%;
    position: absolute;
    background-color: #fff;
    transform: translate(-50%,-50%);
    padding: 15px;
    font-size: 3rem;
    font-weight: 500;
    border-radius: 5px;
}

/* restuarant section*/

.restuarant-title {
  position: relative;
  width: 100%;
  height: 100%;
}

.restuarant-title-text {
  top: 50%;
    left: 50%;
    position: absolute;
    background-color: #fff;
    transform: translate(-50%,-50%);
    padding: 15px;
    font-size: 3rem;
    font-weight: 500;
    border-radius: 5px;
}

/*contact section*/

.contact-info {
  padding: 10px;
}


/* Start of Map Code */

#map {
  height: 700px;
  margin-top: 15px;
}
.icons-display {
  padding: 5px;
}

.container-fluid {
  padding: 0px;
}

